--- a/css/inicio.css
+++ b/css/inicio.css
@@ -16,7 +16,7 @@
     --nueve-color: #FF0000;
 }
 
-@media all and (min-width: 430px) and (max-width: 932px) {
+@media only screen and (min-width : 400px) {
     
     * {
         margin: 0;
