--- a/css/inicio.css
+++ b/css/inicio.css
@@ -16,7 +16,7 @@
     --nueve-color: #FF0000;
 }
 
-@media only screen and (min-width : 400px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px)  {
     
     * {
         margin: 0;
