--- a/css/productos.css
+++ b/css/productos.css
@@ -17,7 +17,7 @@
 }
 
 
-@media only screen and (min-width : 901px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
     
     * {
         margin: 0;
