--- a/css/inicio.css
+++ b/css/inicio.css
@@ -16,7 +16,7 @@
     --nueve-color: #FF0000;
 }
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px)  {
+@media only screen and (max-width : 540px)  and (orientation : portrait) {
     
     * {
         margin: 0;
