--- a/css/productos.css
+++ b/css/productos.css
@@ -17,7 +17,7 @@
 }
 
 
-@media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+@media only screen and (max-width : 540px)  and (orientation : portrait){
     
     * {
         margin: 0;
