--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@
   /* Tamaño tablet horizontal (1024-768) */
   @media all and (min-width: 768px) and (max-width: 1024px) { }
   
-  @media only screen and (min-device-width : 320px) and (max-device-width : 480px){ 
+  @media only screen and (max-width : 540px)  and (orientation : portrait){ 
 
     body {
         margin: 0;
