--- a/css/inicio.css
+++ b/css/inicio.css
@@ -30,6 +30,7 @@
         width: 431px;
         backdrop-filter: blur(3px);
         background: linear-gradient(to top, rgb(11, 12, 13), rgb(6, 7, 8));
+        overflow:auto;
     }
 
     nav {
